[package]
name = "lipotest"
version = "0.1.0"
authors = ["Martin Algesten <martin@algesten.se>"]
edition = "2018"

[lib]
crate-type = ["staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
bindgen = "0.50"
